# reLove_communication_bot

./: .cursorrules  .env.example  .gitignore  .gitmessage.txt  .windsurfrules  ANALYSIS_INDEX.md  ANALYSIS_README.md  ANALYSIS_TZ_VS_IMPLEMENTATION.md  ARCHITECTURE.md  CHANGES_SUMMARY.md  CLEANUP_REPORT.md  DASHBOARD_IMPROVEMENTS.md  DOCKER_SETUP.md  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  INCREMENTAL_UPDATE_GUIDE.md  INTEGRATION_COMPLETE_REPORT.md  LICENSE  MARKERS_STATUS.md  MARKERS_VS_COLUMNS_ANALYSIS.md  NATASHA_ANALYSIS_COMPLETE.md  NATASHA_BOT_PROMPTS.md  NATASHA_EXTRACTION_REPORT.md  NATASHA_STYLE_INTEGRATION.md  PROFILE_ENRICHMENT_GUIDE.md  PROFILE_ENRICHMENT_LOGIC.md  PROFILE_FIELDS_ANALYSIS.md  PROFILE_SYSTEM_SUMMARY.md  PROFILE_UPDATE_STRATEGY.md  PROJECT_STATUS.md  README.md  README_TEST.md  RECOMMENDATIONS.md  SAFE_IMPORT_INSTRUCTIONS.md  SUMMARY.md  TECHNICAL_REQUIREMENTS_RELOVE_BOT.md  USER_UPDATE_FINAL_REPORT.md  alembic.ini  (+18 more)
alembic/: env.py
alembic/versions/: 103c3eae0410_add_streams_field_to_user.py  1c0b53a7aa5a_auto.py  78388a040895_add_profiles_table.py  88d22cd37643_auto.py  abaf549f61fb_remove_unknown_from_genderenum_and_set_.py  abb04cc23e5f_add_photo_jpeg_field_to_user.py  add_diagnostic_tables.py  bfa8be25af29_auto.py  create_personality_test_tables.py  f3006b1e58db_merge_heads.py  youtube_chat_users.py
backups/: .gitignore  README.md
bots/: README.md  pranayama_bot.py
docs/: ADMIN_SETUP.md  ALL_OPTIONS_SUMMARY.md  AUTO_MESSAGES.md  CHANGES_SUMMARY.md  CLEANUP_PLAN.md  COMPLETE_FEATURE_SET.md  COMPLETE_SUMMARY.md  DASHBOARD_INTEGRATION.md  DATASET_COLLECTION_REPORT.md  DATASET_READY_FOR_FINETUNING.md  DATASET_SUMMARY.md  FILES_CREATED.md  FINAL_CLEANUP_REPORT.md  FINAL_IMPLEMENTATION.md  FINAL_SUMMARY.md  FINETUNE_INSTRUCTIONS.md  FREE_FINETUNING_OPTIONS.md  GOOGLE_FINETUNING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTERFACE_IMPROVED.md  JOURNEY_TRACKING.md  KIMI_API_FINDINGS.md  KIMI_FINETUNE_INSTRUCTIONS.md  MODEL_UPDATE.md  NATASHA_DATASET_README.md  OPENAI_UPGRADE_INSTRUCTIONS.md  OPENAI_VS_KIMI_COMPARISON.md  PROJECT_COMPLETE.md  PROMPTS_CHECKLIST.md  PROMPTS_CODE_INTEGRATION.md  PROMPTS_COMPLETION_REPORT.md  PROMPTS_INDEX.md  PROMPTS_QUICK_START.md  PROMPTS_README.md  PROMPTS_START_HERE.md  PROMPTS_TEST_EXAMPLES.md  PROMPTS_UPDATE_SUMMARY.md  PROMPTS_USAGE.md  QUICK_NAVIGATION.md  QUICK_START.md  (+15 more)
docs/analysis/: FILL_PROFILES_ANALYSIS.md  RASA_BOT_ANALYSIS.md  TZ_QUESTIONS_ANSWERS.md
docs/architecture/: ARCHITECTURE_DIAGRAM.md  CODE_EXAMPLES.md
docs/channel-import/: CHANNEL_IMPORT_CHEATSHEET.md  CHANNEL_IMPORT_EXAMPLES.md  CHANNEL_IMPORT_FLOW.md  CHANNEL_IMPORT_GUIDE.md  CHANNEL_IMPORT_INDEX.md  CHANNEL_IMPORT_SUMMARY.md  QUICK_START_CHANNEL_IMPORT.md
docs/deployment/: DEPLOYMENT_SUMMARY.md
docs/features/: FILL_PROFILES_REFACTORING_SUMMARY.md  NATASHA_BOT_README.md  (+1 more)
k8s/: configmap.yaml.example  cronjob.yaml.example  deployment.yaml.example  secret.yaml.example  service.yaml.example
rasa_bot/: README.md  SERVICES_README.md  config.yml  db_service.py  domain.yml  endpoints.yml
relove_bot/: __main__.py  bot.py  config.py  logging_config.py  main.py  web.py
scripts/: README.md  add_missing_columns.py  alembic_upgrade.py  analyze_chat_llm.py  analyze_natasha_sandra_game.py  analyze_relove_channel.py  check_db_state.py  check_tables.py  count_subscriptions.py  create_proactive_tables.py  dashboard.py  diagnose_db_creation.py  fill_profiles.py  fill_profiles_llm.py  find_yt_users_in_telegram.py  force_fill_and_mark_sleeping.py  gender_stats.py  import_users_from_chats.py  init_db.py  init_youtube_chat_table.py  install_spacy_model.py  parse_ritual_meditations.py  print_nonempty_summaries.py  refill_streams.py  run_ngrok.py  show_tables.py  simple_fill_profiles.py  test_get_all_users.py  test_get_entity.py  test_sheet_format.py  test_ssl.py  test_timur_sosa.py  update_gender_from_markers.py
temp/: test_chat_export.txt
tests/: conftest.py  test_analyze_chat.py  test_chat_analyzer_llm.py  test_db.py  test_example.py  test_extract_structured_info.py  test_kimi_api.py  test_kimi_direct.py  test_llm.py  test_pagination.py  test_pranayama_bot.py  test_telethon_session.py  test_video_processing.py
(+191 files in other folders)
