[tool.poetry]
name = "relove-communication-bot"
version = "0.1.0"
description = "Telegram bot for Relove community engagement"
authors = ["Your Name <you@example.com>"] # Замените на ваши данные
readme = "README.md" # Предполагаем наличие README.md
packages = [{include = "relove_bot"}]

[tool.poetry.dependencies]
python = "^3.11" # Используем версию из Dockerfile
aiogram = ">=3.0.0"
aiohttp = ">=3.8.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
python-json-logger = ">=2.0.0"
# Добавьте сюда зависимости для БД (например, asyncpg, sqlalchemy[asyncio]) когда будете готовы
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
# Добавьте сюда зависимости для планировщика (например, apscheduler)

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
# Добавьте другие dev-зависимости (например, black, ruff, mypy)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 